peac_dev/force-app/main/default/objects/Opportunity_Attachment__c/Opportunity_Attachment__c.object-meta.xml
<CustomObject>
    <label>OnBase Attachment</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>File Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OnBase Attachments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>