peac_dev/force-app/main/default/objects/Opportunity_Attachment__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <formula>Opportunity__r.Application__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application #</label>
    <type>Text</type>
</CustomField>