peac_dev/force-app/main/default/objects/Opportunity_Attachment__c/fields/Attachment__c.field-meta.xml
<CustomField>
    <fullName>Attachment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Attachment</label>
    <length>18</length>
    <type>Text</type>
</CustomField>