peac_dev/force-app/main/default/objects/Opportunity_Attachment__c/fields/Dealer_Doc_Type__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Doc_Type__c</fullName>
    <description>DP-254</description>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LC - Assignment of Proceeds</fullName>
                <label>Assignment of Proceeds</label>
            </value>
            <value>
                <fullName>CR - Bank Statements</fullName>
                <label>Bank Statements</label>
            </value>
            <value>
                <fullName>CR - Credit Application</fullName>
                <label>Credit Application</label>
            </value>
            <value>
                <fullName>LC - Invoice</fullName>
                <label>Invoice</label>
            </value>
            <value>
                <fullName>CR - Invoice/Quote/Proposal</fullName>
                <label>Invoice/Quote/Proposal</label>
            </value>
            <value>
                <fullName>LC - Lease</fullName>
                <label>Lease</label>
            </value>
            <value>
                <fullName>LC - Misc</fullName>
                <label>Misc</label>
            </value>
            <value>
                <fullName>LC - Proof of Location</fullName>
                <label>POL</label>
            </value>
            <value>
                <fullName>LC - Tax Exempt Forms/Resale Certificate</fullName>
                <label>Tax Exempt Certificate</label>
            </value>
            <value>
                <fullName>Approval Letter</fullName>
            </value>
            <value>
                <fullName>FS - Approval Letter</fullName>
                <isActive>false</isActive>
                <label>FS - Approval Letter</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>