peac_dev/force-app/main/default/objects/Opportunity_Attachment__c/fields/Doc_Type__c.field-meta.xml
<CustomField>
    <fullName>Doc_Type__c</fullName>
    <description>Store Loan Doc Type</description>
    <label>Doc Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Loan_Doc_Type</valueSetName>
    </valueSet>
</CustomField>