peac_dev/force-app/main/default/objects/Opportunity_Attachment__c/fields/Document_URL__c.field-meta.xml
<CustomField>
    <fullName>Document_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Document URL</label>
    <type>Url</type>
</CustomField>