peac_dev/force-app/main/default/objects/Opportunity_Attachment__c/fields/DPSuperUserDocuments__c.field-meta.xml
<CustomField>
    <fullName>DPSuperUserDocuments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DPSuperUserDocuments</label>
    <type>Checkbox</type>
</CustomField>