peac_dev/force-app/main/default/objects/Opportunity_Attachment__c/fields/OnBase_Response__c.field-meta.xml
<CustomField>
    <fullName>OnBase_Response__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OnBase Response</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>