peac_dev/force-app/main/default/objects/Opportunity_Attachment__c/fields/Sent_To_Ocrolus__c.field-meta.xml
<CustomField>
    <fullName>Sent_To_Ocrolus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent To Ocrolus</label>
    <type>Checkbox</type>
</CustomField>