peac_dev/force-app/main/default/objects/Opportunity_Attachment__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CR - Credit Application</fullName>
            </value>
            <value>
                <fullName>CR - Invoice/Quote/Proposal</fullName>
            </value>
            <value>
                <fullName>CR - Financial Statements</fullName>
            </value>
            <value>
                <fullName>CR - Misc</fullName>
            </value>
            <value>
                <fullName>FS - Bank Statements</fullName>
            </value>
            <value>
                <fullName>FS - Bank Statements - Apr</fullName>
            </value>
            <value>
                <fullName>FS - Bank Statements - Aug</fullName>
            </value>
            <value>
                <fullName>FS - Bank Statements - Dec</fullName>
            </value>
            <value>
                <fullName>FS - Bank Statements - Feb</fullName>
            </value>
            <value>
                <fullName>FS - Bank Statements - Jan</fullName>
            </value>
            <value>
                <fullName>FS - Bank Statements - Jul</fullName>
            </value>
            <value>
                <fullName>FS - Bank Statements - Jun</fullName>
            </value>
            <value>
                <fullName>FS - Bank Statements - Mar</fullName>
            </value>
            <value>
                <fullName>FS - Bank Statements - May</fullName>
            </value>
            <value>
                <fullName>FS - Bank Statements - Nov</fullName>
            </value>
            <value>
                <fullName>FS - Bank Statements - Oct</fullName>
            </value>
            <value>
                <fullName>FS - Bank Statements - Sept</fullName>
            </value>
            <value>
                <fullName>FS - Bank Statements MTD</fullName>
            </value>
            <value>
                <fullName>FS - Competitor Payoff</fullName>
            </value>
            <value>
                <fullName>FS - Credit Application</fullName>
            </value>
            <value>
                <fullName>FS - Financial Statements</fullName>
            </value>
            <value>
                <fullName>FS - Tax Returns</fullName>
            </value>
            <value>
                <fullName>FS - Voided Check</fullName>
            </value>
            <value>
                <fullName>CR - Bank Statements</fullName>
            </value>
            <value>
                <fullName>FS - Landlord Reference</fullName>
            </value>
            <value>
                <fullName>FS - Lease Agreement</fullName>
            </value>
            <value>
                <fullName>FS - Mortgage Statement</fullName>
            </value>
            <value>
                <fullName>FS - Payoff Agreement</fullName>
            </value>
            <value>
                <fullName>FS - Signed Loan Agreement</fullName>
            </value>
            <value>
                <fullName>FS - Bank Statements -Sept</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>