peac_dev/force-app/main/default/objects/Opportunity_Attachment__c/validationRules/Type_Field_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Type_Field_Required</fullName>
    <active>true</active>
    <description>DP-254</description>
    <errorConditionFormula>ISBLANK(TEXT(Type__c))</errorConditionFormula>
    <errorDisplayField>Type__c</errorDisplayField>
    <errorMessage>Complete this field.</errorMessage>
</ValidationRule>